support generate fstar code on ttool